Adição do linkedin de Gabriel

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<a class="nav-link active" href="https://github.com/eduaard4x">Eduarda</a>
 			    </li>
 			    <li class="nav-item ">
-				<a class="nav-link active" href="">Gabriel</a>
+				<a class="nav-link active" href="https://br.linkedin.com/in/gabriel-cristov%C3%A3o-4b49b0393?trk=people-guest_people_search-card">Gabriel</a>
 			    </li>
 			    <li class="nav-item ">
 				<a class="nav-link active" href="https://github.com/MatheusViols">Matheus</a>
@@ -148,16 +148,16 @@
 		<div class="col">
 		    <div class="card overflow-auto text-center shadow-lg" style="max-width:435px; max-height: 435px; min-height: 365px;">
 			<div>
-			    <img class="card-img-top" style="width: 100px; height: 100px; padding-top:10px;" src="img/github.png" alt="icon github">
+			    <img class="card-img-top" style="width: 100px; height: 100px; padding-top:10px;" src="img/linkedin.png" alt="icon linkedin">
 			</div>
 			<div class="card-body p-5">
 			    <p class="card-text text-justify"> 
-			    	Alguns projetos usando Html Css e Javascript.
+			    	Meu perfil do Linkedin com mais informações 
 			    </p>
 
 			    <button type="button" class="btn btn-dark">
-				<a href="#" style="text-decoration: None; color: white;">
-				    Ver o projeto 
+				<a href="https://br.linkedin.com/in/gabriel-cristov%C3%A3o-4b49b0393?trk=people-guest_people_search-card" style="text-decoration: None; color: white;">
+				    Ver o perfil 
 				</a>
 			    </button>
 
