--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" href="css/bootstrap.min.css"> 
 
-	<link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
+	<!-- Fonte utilizada nos titulos -->
+	<link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet"> 
 
+	<!-- Estilização da imagem do hero, definição de tamanho, posição e repeat -->
+	<!-- Estilização do titulo do hero, alinhamento, tipo de fonte e tamanho de fonte -->
+	<!-- Estilização dos cards, definição de largura máxima e altura fixa -->
 	<style>
 	    .hero-imagem {
-		height: 400px;
+		height: 400px; 
 
 		background-image: url('img/banner.jpg');
 		background-position: center;
@@ -43,20 +47,20 @@
     </head>
 
     <body>
-	<header class="container-fluid bg-dark">
+	<header class="container-fluid bg-dark"> <!-- header com todo espaço de width e fundo preto -->
 	    <div>
-		<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-		    <div class="container-fluid justify-content-center">
-			<ul class="navbar-nav">
-			    <li class="nav-item ">
+		<nav class="navbar navbar-expand-md bg-dark navbar-dark"> <!-- navbar do bootstrap -->
+		    <div class="container-fluid justify-content-center"> 
+			<ul class="navbar-nav"> <!-- menu de navegação -->
+			    <li class="nav-item "> <!-- primeiro item de navegação -->
 				<a class="nav-link active" href="https://github.com/eduaard4x">Eduarda</a>
 			    </li>
-			    <li class="nav-item ">
+			    <li class="nav-item "> <!-- segundo item de navegação -->
 				<a class="nav-link active" href="https://br.linkedin.com/in/gabriel-cristov%C3%A3o-4b49b0393?trk=people-guest_people_search-card">Gabriel</a>
 			    </li>
-			    <li class="nav-item ">
+			    <li class="nav-item "> <!-- terceiro item de navegação -->
 				<a class="nav-link active" href="https://github.com/MatheusViols">Matheus</a>
-			    </li> <li class="nav-item ">
+			    </li> <li class="nav-item "> <!-- quarto item de navegação -->
 				<a class="nav-link active" href="https://github.com/yuregabriel12">Yure</a>
 			    </li>
 			</ul>
@@ -66,41 +70,40 @@
 
 	</header>
 
-	<div class="hero-imagem shadow align-content-center">
-	    <div class="hero-titulo">
+	<div class="hero-imagem shadow align-content-center"> <!-- div correspondente ao hero -->
+	    <div class="hero-titulo"> <!-- Titulo dentro do hero -->
 		<span>Mangus Paraíbus</span>
 	    </div>
 	</div>
 
-	<main class="row container-fluid justify-content-center bg-light">
-	    <div class="row gx-5 gy-5">
-		<div class="col">
-		    <div class="card overflow-auto shadow-lg" >
-			<div class="card-title h1 text-center shadow-sm"> Eduarda </div>
+	<!--main está definido como uma linha, usei justify-content-center para centralizar todas as linhas--> 
+	<main class="row container-fluid justify-content-center bg-light">  
+	    <div class="row gx-5 gy-5"> <!-- Primeira linha de cards, gap horizontal e vertical de 5-->
+		<div class="col"> 
+		    <div class="card overflow-auto shadow-lg" > <!-- Primeiro card, descrição -->
+			<div class="card-title h1 text-center shadow-sm"> Eduarda </div> <!-- Titulo do card -->
 			<div class="card-body">
-			    <p class="card-text text-justify">
-				<p class="desc" >
-					18 anos. Estudante do curso de Análise e Desenvolvimento de Sistemas,
-					apaixonada por criar experiências visuais únicas e funcionais.
-					Criativa e comunicativa, gosto de explorar o design e a persona
-					lização de projetos especialmente no Front End, unindo estática
-					e usabilidade
-				</p>
+			    <p class="card-text text-justify"> <!-- Descrição pessoal -->
+				    18 anos. Estudante do curso de Análise e Desenvolvimento de Sistemas,
+				    apaixonada por criar experiências visuais únicas e funcionais.
+				    Criativa e comunicativa, gosto de explorar o design e a persona
+				    lização de projetos especialmente no Front End, unindo estática
+				    e usabilidade
 			    </p>
 			</div>
 		    </div>
 		</div>
 
 		<div class="col">
-		    <div class="card text-center shadow-lg">
+		    <div class="card text-center shadow-lg"> <!-- Segundo card, tecnologia -->
 			<div>
-			    <img class="card-img-top" style="width: 300px; height: 300px; padding-top:10px;" src="img/web.png" alt="logo html">
-			</div>
+			    <img class="card-img-top" style="width: 300px; height: 300px; padding-top:10px;" src="img/web.png" alt="logo html"> 
+			</div> 
 		    </div>
 		</div>
 
 		<div class="col">
-		    <div class="card text-center overflow-auto shadow-lg">
+		    <div class="card text-center overflow-auto shadow-lg"> <!-- Terceiro card, link de projeto -->
 			<div>
 			    <img class="card-img-top" style="width:100px; height:100px; padding-top:10px;" src="img/github.png" alt="icon github">
 			</div>
@@ -111,7 +114,7 @@
 
 			    <button type="button" class="btn btn-dark">
 				<a href="https://github.com/eduaard4x/cli" style="text-decoration: None; color: white;">
-				    Ver o projeto 
+				    Ver o projeto
 				</a>
 			    </button>
 
@@ -120,25 +123,23 @@
 		</div>
 	    </div>
 
-	    <div class="row gx-5 gy-5">
+	    <div class="row gx-5 gy-5"> <!-- Segunda linha de cards, gap horizontal e vertical de 5-->
 		<div class="col">
-		    <div class="card overflow-auto shadow-lg" >
+		    <div class="card overflow-auto shadow-lg" > <!-- Primeiro card, descrição -->
 			<div class="card-title h1 text-center shadow-sm"> Gabriel </div>
 			<div class="card-body">
-			    <div class="card-text text-justify">
-				<p>
-				    Eu me chamo Gabriel. Tenho 18 anos, estou cursando análise e
-				    desenvolvimento de sistemas e estou no segundo período.
-				    Foco meus estudos em desenvolvimento Front End usando Html,
-				    CSS e JavaScript.
-				</p>
+			    <div class="card-text text-justify"> <!-- Descrição pessoal -->
+				Eu me chamo Gabriel. Tenho 18 anos, estou cursando análise e
+				desenvolvimento de sistemas e estou no segundo período.
+				Foco meus estudos em desenvolvimento Front End usando Html,
+				CSS e JavaScript.
 			    </div>
 			</div>
 		    </div>
 		</div>
 
 		<div class="col">
-		    <div class="card text-center shadow-lg" style="max-width:435px; max-height: 365px; min-height: 365px;">
+		    <div class="card text-center shadow-lg"> <!-- Segundo card, tecnologia -->
 			<div>
 			    <img class="card-img-top" style="width: 300px; height: 300px; padding-top:10px;" src="img/web.png" alt="logo html, css e javascript">
 			</div>
@@ -146,7 +147,7 @@
 		</div>
 
 		<div class="col">
-		    <div class="card overflow-auto text-center shadow-lg" style="max-width:435px; max-height: 435px; min-height: 365px;">
+		    <div class="card overflow-auto text-center shadow-lg"> <!-- Terceiro card, link de linkedin -->
 			<div>
 			    <img class="card-img-top" style="width: 100px; height: 100px; padding-top:10px;" src="img/linkedin.png" alt="icon linkedin">
 			</div>
@@ -166,9 +167,9 @@
 		</div>
 	    </div>
 
-	    <div class="row gx-5 gy-5">
+	    <div class="row gx-5 gy-5"> <!-- Terceira linha de cards, gap horizontal e vertical de 5-->
 		<div class="col">
-		    <div class="card overflow-auto shadow-lg">
+		    <div class="card overflow-auto shadow-lg"> <!-- Primeiro card, descrição pessoal -->
 			<div class="card-title h1 text-center shadow-sm"> Matheus </div>
 			<div class="card-body">
 			    <div class="card-text text-justify">
@@ -182,7 +183,7 @@
 		</div>
 
 		<div class="col">
-		    <div class="card text-center shadow-lg">
+		    <div class="card text-center shadow-lg"> <!-- Segundo card, tecnologia -->
 			<div>
 			    <img class="card-img-top" style="width: 300px; height: 300px; padding-top:10px;" src="img/pythonjava.png" alt="logo html">
 			</div>
@@ -190,7 +191,7 @@
 		</div>
 
 		<div class="col">
-		    <div class="card text-center overflow-auto shadow-lg" >
+		    <div class="card text-center overflow-auto shadow-lg" > <!-- Terceiro card, link de projeto -->
 			<div>
 			    <img class="card-img-top" style="width: 100px; height: 100px; padding-top:10px;" src="img/github.png" alt="icon github">
 			</div>
@@ -202,7 +203,7 @@
 
 			    <button type="button" class="btn btn-dark">
 				<a href="https://github.com/MatheusViols/Projeto-Crud" style="text-decoration: None; color: white;">
-				    Ver o projeto 
+				    Ver o projeto
 				</a>
 			    </button>
 
@@ -211,9 +212,9 @@
 		</div>
 	    </div>
 
-	    <div class="row gx-5 gy-5">
+	    <div class="row gx-5 gy-5"> <!-- Quarta linha de cards, gap horizontal e vertical de 5-->
 		<div class="col">
-		    <div class="card overflow-auto shadow-lg" >
+		    <div class="card overflow-auto shadow-lg" > <!-- Primeiro card, descrição pessoal -->
 			<div class="card-title h1 text-center shadow-sm"> Yure </div>
 			<div class="card-body">
 			    <div class="card-text">
@@ -228,7 +229,7 @@
 		</div>
 
 		<div class="col">
-		    <div class="card text-center shadow-lg" style="max-width:435px; max-height: 435px; min-height: 365px;">
+		    <div class="card text-center shadow-lg"> <!-- Segundo card, tecnologia -->
 			<div>
 			    <img class="card-img-top" style="width: 300px; height: 300px; padding-top:10px;" src="img/mysql.png" alt="logo mysql">
 			</div>
@@ -236,7 +237,7 @@
 		</div>
 
 		<div class="col">
-		    <div class="card text-center overflow-auto shadow-lg" style="max-width:435px; max-height: 435px; min-height: 365px;">
+		    <div class="card text-center overflow-auto shadow-lg"> <!-- Terceiro card, link de projeto -->
 			<div>
 			    <img class="card-img-top" style="width: 100px; height: 100px; padding-top:10px;" src="img/github.png" alt="icon github">
 			</div>
@@ -259,8 +260,9 @@
 	</main>
 
 
+	<!-- rodapé da página contendo o nome dos integrantes do grupo -->
 	<footer class="bg-dark text-white align-content-center p-3" style="margin-top: 50px;">
-	    <p style="text-align: center;">&copy Todos os direitos reservados</p>
+	    <p style="text-align: center;"> &copy; Todos os direitos reservados</p>
 	    <p style="text-align: center;">
 		Maria Eduarda<br>
 		Gabriel Cristovão<br>
